<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/paddingHorizontal">

        <TextView
            style="@style/txtHeader"
            android:text="@string/q1" />

        <TextView
            style="@style/txtBody"
            android:text="@string/ans1" />

        <View style="@style/line" />

        <TextView
            style="@style/txtHeader"
            android:text="@string/q2" />

        <TextView
            style="@style/txtBody"
            android:text="@string/ans2" />

        <View style="@style/line" />

        <TextView
            style="@style/txtHeader"
            android:text="@string/q3" />

        <TextView
            style="@style/txtBody"
            android:text="@string/ans3" />

        <View style="@style/line" />

        <TextView
            style="@style/txtHeader"
            android:text="@string/q4" />

        <TextView
            style="@style/txtBody"
            android:text="@string/ans4" />

        <View style="@style/line" />

        <TextView
            style="@style/txtHeader"
            android:text="@string/q5" />

        <TextView
            style="@style/txtBody"
            android:text="@string/ans5" />

        <View style="@style/line" />

        <View
            style="@style/line"
            android:layout_marginVertical="@dimen/margin" />

    </LinearLayout>
</ScrollView>