<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.LevelsFragment">

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/easy"
        android:textAllCaps="false"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/medium"
        android:textAllCaps="false"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/hard"
        android:textAllCaps="false"
        android:textSize="32sp" />


</LinearLayout>