<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OnlineRegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="@dimen/margin_large"
        android:src="@drawable/icon_primary_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/enter_your_username"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/txt_medium"
        android:layout_marginBottom="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/etUserName"/>

    <EditText
        android:id="@+id/etUserName"
        style="@style/et"
        android:layout_width="@dimen/btn_width_large"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnOk"
        android:layout_centerHorizontal="true"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/paddingHorizontal"
        android:paddingVertical="@dimen/paddingVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etUserPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/etUserPass"
        style="@style/et"
        android:layout_width="@dimen/btn_width_large"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnOk"
        android:layout_centerHorizontal="true"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/paddingHorizontal"
        android:paddingVertical="@dimen/paddingVertical"
        app:layout_constraintBottom_toTopOf="@+id/btnOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName"/>

    <Button
        android:id="@+id/btnOk"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:paddingHorizontal="@dimen/paddingHorizontal"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserName" />

</androidx.constraintlayout.widget.ConstraintLayout>