<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GameWinFragment">

    <ImageView
        android:id="@+id/imgGameStatus"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:contentDescription="@string/imgGameStatus"
        tools:src="@drawable/emoji_draw" />

    <TextView
        android:id="@+id/txtGameStatus"
        style="@style/txtBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgGameStatus"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/txt_medium"
        tools:text="You have won" />

    <Button
        android:id="@+id/btnReplay"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGameStatus"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:width="@dimen/btn_width_medium"
        android:text="@string/replay" />

    <Button
        android:id="@+id/btnExit"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtGameStatus"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:width="@dimen/btn_width_medium"
        android:text="@string/exit" />

</RelativeLayout>