<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/woods"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".activity.MainActivity">

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnSinglePLayer"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#7ab800"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/single_player"
        fancy:fb_textColor="#FFFFFF"
        android:onClick="startSinglePlayerGame"
        fancy:fb_textSize="@dimen/size_menu" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnOnline"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:onClick="startGameOnline"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#7ab800"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/online"
        fancy:fb_textColor="#FFFFFF"
        fancy:fb_textSize="@dimen/size_menu" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnAbout"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#7ab800"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/about"
        fancy:fb_textColor="#FFFFFF"
        fancy:fb_textSize="@dimen/size_menu" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnExit"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#7ab800"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/exit"
        fancy:fb_textColor="#FFFFFF"
        fancy:fb_textSize="@dimen/size_menu" />

</LinearLayout>