<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woods"
    android:orientation="vertical"
    tools:context=".OnlineLoginActivity">

    <TextView
        android:id="@+id/txtUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSendRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_request_to"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <ListView
                android:id="@+id/lvRegisteredUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAcceptRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept_request_from"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <ListView
                android:id="@+id/lvRequestedUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>